# cat

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml
bot/: config.py  models.py  shortcuts.yaml
bot/core/: affinity.py  chat_engine.py  context_compressor.py  memory.py  persona.py  prompt.py  rule_engine.py  sliding_window.py  smart_trigger.py
bot/plugins/: admin.py  group_chat.py  scheduled.py  shortcuts.py
bot/utils/: token_counter.py
docs/: Makefile  README.md  design.md  make.bat
docs/source/: architecture.md  conf.py  configuration.md  deployment.md  index.rst
docs/source/api/: config.rst  core.rst  index.rst  models.rst  plugins.rst  utils.rst
personas/: default.yaml
scripts/: README.md  test_llm_call.py
